--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,46 +32,54 @@
             android:textColor="@color/black"
             android:layout_marginTop="20dp"/>
 
-        <TextView
-            android:id="@+id/txtJuz"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Juz: "
-            android:layout_marginTop="5dp"
-            android:layout_gravity="center"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
+            android:orientation="vertical"
+            android:layout_gravity="center">
 
-        <TextView
-            android:id="@+id/txtSurah"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Surat: "
-            android:layout_gravity="center"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
+            <TextView
+                android:id="@+id/txtJuz"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Juz: "
+                android:layout_marginTop="5dp"
+                android:layout_gravity="left"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
 
-        <TextView
-            android:id="@+id/txtAyat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ayat: "
-            android:layout_gravity="center"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
+            <TextView
+                android:id="@+id/txtSurah"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Surat: "
+                android:layout_gravity="left"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
 
-        <TextView
-            android:id="@+id/txtTempat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tempat tadarus: "
-            android:layout_gravity="center"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
+            <TextView
+                android:id="@+id/txtAyat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ayat terakhir: "
+                android:layout_gravity="left"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:id="@+id/txtTempat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tempat tadarus: "
+                android:layout_gravity="left"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/txtNoData"
