--- a/app/src/main/res/layout/activity_update_tadarus.xml
+++ b/app/src/main/res/layout/activity_update_tadarus.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tambah Catatan Tadarus"
+        android:text="Edit Catatan Tadarus"
         android:layout_gravity="center"
         android:textColor="@color/black"
         android:textStyle="bold"
